--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -51,7 +51,7 @@
 		"prepublishOnly": "pnpm build",
 		"test": "vitest --coverage",
 		"type-check": "vue-tsc --noEmit",
-		"clean": "rm -rf dist .turbo coverage",
+		"purge": "rm -rf dist .turbo coverage",
 		"prepack": "pnpm build"
 	},
 	"dependencies": {
