--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"npm-run-all2": "^8.0.4",
 		"oxlint": "~1.41.0",
 		"oxlint-tsgolint": "^0.11.1",
+		"postcss": "^8.5.6",
 		"prettier": "^3.8.0",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
