--- a/packages/bamboo-docs/package.json
+++ b/packages/bamboo-docs/package.json
@@ -23,6 +23,8 @@
 	"devDependencies": {
 		"@mrksbnc/bamboo-vue": "workspace:*",
 		"@vueuse/core": "^14.1.0",
+		"@whyframe/core": "^0.1.14",
+		"@whyframe/vue": "^0.1.9",
 		"@workspace/bamboo-core": "workspace:*",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.3",
