--- a/packages/bamboo-docs/tsconfig.json
+++ b/packages/bamboo-docs/tsconfig.json
@@ -3,5 +3,5 @@
 	"compilerOptions": {
 		"types": ["node"]
 	},
-	"include": [".vitepress/**/*.ts", "src/**/*.ts"]
+	"include": [".vitepress/**/*.ts"]
 }
