--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -60,7 +60,8 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^6.0.3",
-		"@vue/tsconfig": "^0.8.1"
+		"@vue/tsconfig": "^0.8.1",
+		"@workspace/config": "workspace:*"
 	},
 	"peerDependencies": {
 		"vue": "^3.5.25"
