--- a/packages/bamboo-vue/tsconfig.app.json
+++ b/packages/bamboo-vue/tsconfig.app.json
@@ -1,10 +1,9 @@
 {
-	"extends": "@vue/tsconfig/tsconfig.dom.json",
+	"extends": "@workspace/config/tsconfig.vue.json",
 	"compilerOptions": {
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"lib": ["dom", "esnext"]
+		"declaration": true,
+		"declarationMap": true,
+		"outDir": "./dist"
 	},
-	"exclude": ["src/**/__tests__/*"],
-	"include": ["env.d.ts", "src/**/*", "src/**/*.vue"]
+	"include": ["env.d.ts", "src/**/*.ts", "src/**/*.vue"]
 }
