--- a/packages/bamboo-vue/tsconfig.node.json
+++ b/packages/bamboo-vue/tsconfig.node.json
@@ -1,10 +1,7 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "@workspace/config/tsconfig.node.json",
 	"compilerOptions": {
-		"noEmit": true,
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"types": ["node"]
+		"noEmit": true
 	},
 	"include": ["vite.config.ts", "vitest.config.ts"]
 }
