--- a/packages/bamboo-vue/tsconfig.vitest.json
+++ b/packages/bamboo-vue/tsconfig.vitest.json
@@ -1,10 +1,4 @@
 {
-	"extends": "./tsconfig.app.json",
-	"compilerOptions": {
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"lib": [],
-		"types": ["node", "jsdom"]
-	},
-	"include": ["src/**/*.test.ts", "env.d.ts"]
+	"extends": "@workspace/config/tsconfig.vitest.json",
+	"include": ["src/**/*.test.ts", "src/**/*.spec.ts", "env.d.ts"]
 }
